--- a/html-sandbox-starter/12-transitions-animations-js/06-hamburger-menu/styles.css
+++ b/html-sandbox-starter/12-transitions-animations-js/06-hamburger-menu/styles.css
@@ -5,5 +5,81 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+li {
+  list-style: none;
+}
+img {
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.navbar {
+  background: lightblue;
+  padding: 1rem 2rem;
+  height: 80px;
+}
+
+.navbar .logo {
+  width: 50px;
+}
+
+.navbar-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar .main-menu-list {
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+.navbar a:hover {
+  color: blue;
+}
+
+/* Mobile Menu */
+
+.navbar .mobile-menu-items {
+  position: absolute;
+  top: 80px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(154, 192, 204, 0.5);
+  text-align: center;
+  transform: translateX(100%);
+  /*transition: transform 0.3s ease;*/
+}
+
+.navbar .mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%; 
+  padding-top: 300px;
+  gap: 2rem;
+  font-size:1.2rem;
+}
+
+
+
+@media (max-width: 768px) {
+  .navbar .main-menu {
+    display: none;
+  }
 }
